[package]
name = "cookies"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json", "tls", "msgpack", "uuid"] }
#async-trait = "0.1.52"

[dependencies.rocket_dyn_templates]
rocket_dyn_templates = "0.5.0-rc.1"
features = ["handlebars"]
